--- a/homework2.html
+++ b/homework2.html
@@ -11,7 +11,7 @@
     <p>You can find them in <sub>source code</sub> of this page.</p>
     <hr/>
     <h4>Case 1:File path.</h4>
-    <a href="作业图/微信图片_20230312110637.jpg" style="color:rgb(138, 112, 162)">Show me a local picture</a>
+    <a href="微信图片_20230312110637.jpg" style="color:rgb(138, 112, 162)">Show me a local picture</a>
 <hr/>
     <h3>Case 2:Stylize</h3>
     <p style="border:2px dotted blue;font-family: 'Courier New', Courier, monospace;color:brown">I stylized text color,font-size,font-family,text-align,boder of this paragragh.</p>
@@ -21,15 +21,15 @@
 </div>
 <div style="border:2px solid rgb(99, 72, 72)">
     <h3>Case 4:Image with alt info and image as a link</h3>
-    <img src="作业图/DSC02022.jpg" alt="打麻将" style="width:500px;height:600px"> 
+    <img src="DSC02022.jpg" alt="打麻将" style="width:500px;height:600px"> 
     <a href="https://www.baidu.com">
-        <img src="作业图/微信图片_20230312110637.jpg" style="width:1200px;height:600px">
+        <img src="微信图片_20230312110637.jpg" style="width:1200px;height:600px">
     </a>
 </div>
 <div style="border:2px solid rgb(87, 60, 60)">
     <h3>Case 5:Video and Audio with control panel</h3>
-<video src="作业图/WeChat_20230331164630.mp4" controls="controls"></video>
-<audio src="作业图/单反相机的聚焦和快门声 - Freesound.wav" controls="controls"></audio>
+<video src="WeChat_20230331164630.mp4" controls="controls"></video>
+<audio src="单反相机的聚焦和快门声 - Freesound.wav" controls="controls"></audio>
 </div>
 
 </body>
