--- a/CANDYBUNNY.html
+++ b/CANDYBUNNY.html
@@ -6,6 +6,16 @@
         body {
             background-color: beige;
         }
+        @media (max-width: 600px) {
+        #gameArea {
+            width: 100%;
+            height: 300px;
+        }
+        #rules, #timer, #score {
+            width: 100%;
+            right: 0;
+        }
+    }
         #gameArea {
             position: relative;
             height: 600px;
